--- a/.github/workflows/PRTests.yml
+++ b/.github/workflows/PRTests.yml
@@ -7,3 +7,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Danger
         uses: danger/swift@3.13.0
+        with:
+          args: --failOnErrors --no-publish-check
+        env:
+          GITHUB_TOKEN: ${{ secrets.DANGER_BOT }}
