--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift,xcode
+/iHogApp/App.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
